# mailmorph-back

./: .gitignore  README.md  main.py  procfile  pyproject.toml  requirements.txt
routes/: leads.py
services/: ai_writer.py  email.py  email_reader.py  email_replies.py  email_storage.py  followagent.py  followupsend.py  gmail_auth.py  leads.py  models.py  payment.py  reply.py  storage.py
